temporally fixed for overflow tag list in original layout

--- a/browser/render/layouts/original/snippet-item/snippet-item.sass
+++ b/browser/render/layouts/original/snippet-item/snippet-item.sass
@@ -59,6 +59,7 @@
     padding: 0 10px
     font-style: italic
     margin-bottom: 0
+    overflow: hidden
     .icon
       margin-right: 10px
       font-size: 13px
